# verifier-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  EMAIL_TEMPLATES.md  FEATURE_GAP_ANALYSIS.md  KERNEL_INTEGRATION.md  KERNEL_SUBMISSION_GUIDE.md  LICENSE  MAINTAINER_FAQ.md  PERFORMANCE.md  PLAN.md  README.md  RFC.md  RFC.txt  RFC_COVER_LETTER.md  RFC_EMAIL.txt  SUBMISSION_CHECKLIST.md  SUBMISSION_INSTRUCTIONS.txt  UNSAFE_AUDIT.md  x86_64-linux-kernel.json
benches/: verification_time.rs  verifier_benchmarks.rs
benchmarks/: README.md  benchmark_compare.sh
crates/bpf-verifier/: Cargo.toml
crates/bpf-verifier-core/: Cargo.toml
crates/bpf-verifier-core/src/: lib.rs
crates/bpf-verifier-core/src/analysis/: cfg.rs  leak_detector.rs  liveness.rs  loop_check.rs  mod.rs  precision.rs  prune.rs  race_detector.rs  scc.rs  state_merge.rs  states_equal.rs
crates/bpf-verifier-core/src/bounds/: insn_bounds.rs  mod.rs  range_refine.rs  scalar.rs  tnum.rs
crates/bpf-verifier-core/src/btf/: core.rs  database.rs  func_info.rs  integration.rs  mod.rs  validation.rs
crates/bpf-verifier-core/src/check/: alu.rs  arg_checks.rs  atomic.rs  attach_target.rs  callback.rs  helper.rs  helper_db.rs  jump.rs  kfunc.rs  kfunc_args.rs  load_store.rs  mod.rs  prog_type.rs  retval.rs  sdiv.rs  sleepable.rs  special_types.rs  subprog.rs
crates/bpf-verifier-core/src/core/: disasm.rs  error.rs  insn.rs  insn_verify.rs  log.rs  mod.rs  types.rs
crates/bpf-verifier-core/src/mem/: arena.rs  context.rs  memory.rs  mod.rs  packet.rs  stack_access.rs  user.rs
crates/bpf-verifier-core/src/opt/: cache.rs  call_summary.rs  ctx_access.rs  dead_code.rs  jit_subprogs.rs  misc_fixups.rs  mod.rs  pass.rs  patching.rs
crates/bpf-verifier-core/src/platform/: context.rs  helper.rs  kfunc.rs  map.rs  mod.rs  prog_type.rs  spec.rs  types.rs
crates/bpf-verifier-core/src/sanitize/: mod.rs  overflow.rs  spectre.rs
crates/bpf-verifier-core/src/special/: dynptr.rs  exception.rs  iter.rs  map_ops.rs  map_type_check.rs  mod.rs  rbtree.rs  struct_ops.rs  timer_kptr.rs
crates/bpf-verifier-core/src/state/: idmap.rs  lock_state.rs  mod.rs  reference.rs  reg_state.rs  snapshot.rs  spill_fill.rs  stack_state.rs  verifier_state.rs
crates/bpf-verifier-core/src/verifier/: branch_state.rs  env.rs  generic_env.rs  generic_verifier.rs  limits.rs  loader.rs  main_loop.rs  mod.rs  parallel.rs  result.rs  stats.rs  worklist.rs  worklist_verifier.rs
crates/bpf-verifier-linux/: Cargo.toml
crates/bpf-verifier-linux/src/: context.rs  helper_db.rs  kfuncs.rs  lib.rs  map_types.rs  prog_types.rs  spec.rs
crates/bpf-verifier-linux/src/kernel/: alloc.rs  bindings.rs  bridge.rs  error.rs  log.rs  mod.rs
crates/bpf-verifier/src/: lib.rs
crates/bpf-verifier/tests/: analysis_cfg_test.rs  analysis_leak_detector_test.rs  analysis_liveness_test.rs  analysis_loop_check_test.rs  analysis_precision_test.rs  analysis_prune_test.rs  analysis_race_detector_test.rs  analysis_scc_test.rs  analysis_state_merge_test.rs  analysis_states_equal_test.rs  bounds_bounds_test.rs  bounds_insn_bounds_test.rs  bounds_range_refine_test.rs  bounds_tnum_test.rs  btf_btf_test.rs  btf_core_test.rs  btf_func_info_test.rs  btf_integration_test.rs  btf_validation_test.rs  check_alu_test.rs  check_arg_checks_test.rs  check_atomic_test.rs  check_attach_target_test.rs  check_callback_test.rs  check_helper_db_test.rs  check_helper_test.rs  check_jump_test.rs  check_kfunc_args_test.rs  check_kfunc_test.rs  check_load_store_test.rs  check_prog_type_test.rs  check_retval_test.rs  check_sdiv_test.rs  check_sleepable_test.rs  check_special_types_test.rs  check_subprog_test.rs  core_disasm_test.rs  core_insn_test.rs  core_insn_verify_test.rs  core_log_test.rs  (+48 more)
docs/: CHANGELOG.md  PERFORMANCE.md  UNSAFE_AUDIT.md
docs/tutorial/: 00-introduction.md  01-what-is-bpf.md  02-bpf-instructions.md  03-why-verifier.md  04-project-architecture.md  05-core-data-structures.md  06-verification-flow.md  07-bounds-analysis.md  08-state-pruning.md  09-platform-abstraction.md  10-hands-on.md
examples/: demo.rs  verify_program.rs
kernel-integration/: 0001-bpf-Add-Rust-BPF-verifier-infrastructure.patch  INTEGRATION.md  Kconfig  Makefile  bpf_verifier_rust_glue.c  rust_bpf_verifier.rs
kernel-module/: INTEGRATION.md  Kbuild  Makefile  README.md  module.lds  strip-rust-lib.sh
kernel-module/include/: bpf_verifier_rs.h
kernel-module/src/: bpf_verifier_mod.c
kernel-module/test/: Makefile  test_ioctl.c  test_simple.c
kernel-module/tests/: alu_ops.bpf.c  bounds_check.bpf.c  invalid_programs.bpf.c  test_loader.c  (+1 more)
patches/: 0000-cover-letter.patch  0001-bpf-Add-Kconfig-options-for-Rust-BPF-verifier.patch  0002-bpf-Add-Rust-BPF-verifier-module.patch  0003-bpf-Hook-Rust-verifier-into-verification-path.patch
scripts/: generate-patches.sh  send-rfc.sh  verify_helpers.sh
src/: ffi.rs  lib.rs
tests/: analysis_cfg_test.rs  analysis_leak_detector_test.rs  analysis_liveness_test.rs  analysis_loop_check_test.rs  analysis_precision_test.rs  analysis_prune_test.rs  analysis_race_detector_test.rs  analysis_scc_test.rs  analysis_state_merge_test.rs  analysis_states_equal_test.rs  bounds_bounds_test.rs  bounds_insn_bounds_test.rs  bounds_range_refine_test.rs  bounds_tnum_test.rs  btf_btf_test.rs  btf_core_test.rs  btf_func_info_test.rs  btf_integration_test.rs  btf_validation_test.rs  check_alu_test.rs  check_arg_checks_test.rs  check_atomic_test.rs  check_attach_target_test.rs  check_callback_test.rs  check_helper_db_test.rs  check_helper_test.rs  check_jump_test.rs  check_kfunc_args_test.rs  check_kfunc_test.rs  check_load_store_test.rs  check_prog_type_test.rs  check_retval_test.rs  check_sdiv_test.rs  check_sleepable_test.rs  check_special_types_test.rs  check_subprog_test.rs  core_disasm_test.rs  core_insn_test.rs  core_insn_verify_test.rs  core_log_test.rs  (+46 more)
tools/: test_harness.rs
(+111 files in other folders)
