# SPDX-License-Identifier: GPL-2.0

[package]
name = "bpf_verifier"
version = "0.1.0"
edition = "2021"
authors = ["MCB-SMART-BOY <mcb2720838051@gmail.com>"]
description = "A Rust implementation of the Linux kernel BPF verifier for Rust for Linux"
license = "GPL-2.0-only"
repository = "https://github.com/MCB-SMART-BOY/verifier-rs"
readme = "README.md"
keywords = ["bpf", "ebpf", "verifier", "linux", "kernel", "rust-for-linux"]
categories = ["no-std", "os::linux-apis"]

[lib]
name = "bpf_verifier"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
bitflags = { version = "2.4", default-features = false }

[features]
default = []
# Enable verbose logging (for debugging)
verbose = []
# Enable statistics collection
stats = []
# Enable kernel integration (for building as kernel module)
kernel = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 2

[profile.dev]
panic = "abort"
