# SPDX-License-Identifier: GPL-2.0

[workspace]
resolver = "2"
members = [
    "crates/bpf-verifier-core",
    "crates/bpf-verifier-linux",
    "crates/bpf-verifier",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["MCB-SMART-BOY <mcb2720838051@gmail.com>"]
license = "GPL-2.0-only"
repository = "https://github.com/MCB-SMART-BOY/verifier-rs"
keywords = ["bpf", "ebpf", "verifier", "kernel"]
categories = ["no-std", "os"]

[workspace.dependencies]
# Internal crates
bpf-verifier-core = { path = "crates/bpf-verifier-core" }
bpf-verifier-linux = { path = "crates/bpf-verifier-linux" }

# External dependencies
bitflags = { version = "2.10", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("__disabled_test__"))'] }

[workspace.lints.clippy]
field_reassign_with_default = "allow"
unnecessary_cast = "allow"
unnecessary_map_or = "allow"
get_first = "allow"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 2

[profile.dev]
panic = "abort"
